--- a/msf-deployed/requirements.txt
+++ b/msf-deployed/requirements.txt
@@ -3,9 +3,9 @@ requests>=2.25.0
 python-dotenv>=0.19.0
 transformers>=4.0.0
 streamlit>=1.0.0
-crewai>=0.1.0
-crewai_tools>=0.1.0
+crewai==0.102.0
+crewai_tools==0.36.0
 PyGithub>=1.55
-openai>=1.0.0
+openai==1.64.0
 pysqlite3-binary>=0.5.4
 chromadb==0.6.3
